# name_transliteration

./: README.md  ar_language_cleansed.json  ar_language_filtered.json  es_language_cleansed.json  ja_data.csv  ja_language_cleansed.json  japanese_pipeline.ipynb  loading_models_test.ipynb  pyproject.toml  zh_language_cleansed.json  zh_language_filtered.json
.ipynb_checkpoints/: keras_example-checkpoint.ipynb
actual_iterative_model/: actual iterative model-Copy1.ipynb
documents/: Book1.xlsx  actual presentation.pptx  draft presentation.pptx  plots.ipynb  video script.docx  ~$deo script.docx  ~$draft presentation.pptx
edit_threshold_testing/: edit_distance_test.ipynb  ja_0.1_edit_distance_language_cleansed.txt  ja_0_edit_distance_language_cleansed.txt  ja_language_filtered.txt
iterative_model_experiment/: actual iterative model-Copy1.ipynb  actual iterative model.ipynb  cleansed_names.txt  cleansed_set_B_small.txt  cleansing_stats.txt  data_parameters  filtered_set_B.txt  filtered_set_B_0.txt  filtered_set_B_1.txt  filtered_set_B_10.txt  filtered_set_B_11.txt  filtered_set_B_12.txt  filtered_set_B_13.txt  filtered_set_B_2.txt  filtered_set_B_3.txt  filtered_set_B_4.txt  filtered_set_B_5.txt  filtered_set_B_6.txt  filtered_set_B_7.txt  filtered_set_B_8.txt  filtered_set_B_9.txt  input_char_set  ja_stats_20_epochs.txt  model_cleansed_names.txt  output_char_set  plotting data.ipynb  raw_names.txt  small_names.txt  split_train_into_two.ipynb  test1_cleansed.txt  test2_cleansed.txt  test3_cleansed.txt  train_10_edit_distance_language_cleansed.txt  with_confidence_df  (+5 more)
(+310 files in other folders)
