[tool.poetry]
name = "name_transliteration"
version = "0.0.1"
description = ""
authors = ["yug <yu.greenland@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
epitran = "^1.9"
pandas = "^1.2.3"
pykakasi = "^2.0.6"
editdistance = "^0.5.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
